# remora-carvera

./: .gitignore  .gitmodules  .mbedignore  CMakeLists.txt  README.md  configuration.h  main.cpp  mbed_app.json  mbed_app.json5  openocd-rpi.cfg
Firmware/FirmwareSource/Remora-OS5/: .gitignore  configuration.h  main.cpp  mbed_app.json  remora.h
Firmware/FirmwareSource/Remora-OS5/drivers/comms/: RemoraComms.cpp  RemoraComms.h
Firmware/FirmwareSource/Remora-OS5/drivers/pin/: pin.cpp  pin.h
Firmware/FirmwareSource/Remora-OS5/drivers/softPwm/: softPwm.cpp  softPwm.h
Firmware/FirmwareSource/Remora-OS5/machine_config/: machine_config.cpp  machine_config.h
Firmware/FirmwareSource/Remora-OS5/modules/: module.cpp  module.h
Firmware/FirmwareSource/Remora-OS5/modules/blink/: blink.cpp  blink.h
Firmware/FirmwareSource/Remora-OS5/modules/digitalPin/: digitalPin.cpp  digitalPin.h
Firmware/FirmwareSource/Remora-OS5/modules/eStop/: eStop.cpp  eStop.h
Firmware/FirmwareSource/Remora-OS5/modules/motorPower/: motorPower.cpp  motorPower.h
Firmware/FirmwareSource/Remora-OS5/modules/pulseCounter/: pulseCounter.cpp  pulseCounter.h
Firmware/FirmwareSource/Remora-OS5/modules/pwm/: hardwarePwm.cpp  hardwarePwm.h  (+2 more)
Firmware/FirmwareSource/Remora-OS5/sensors/: tempSensor.h
Firmware/FirmwareSource/Remora-OS5/thread/: createThreads.h  interrupt.cpp  interrupt.h  irqHandlers.h  lpcTimer.cpp  pruThread.cpp  pruThread.h  timer.cpp
Firmware/config/carvera_air/: config.json  config.txt
LinuxCNC/Components/Remora-spi/: remora-spi.c  remora.h
LinuxCNC/config/carvera/: carvera_air.hal  carvera_air.ini
drivers/: CMakeLists.txt
drivers/comms/: CMakeLists.txt  Comms.cpp  Comms.h  RemoraComms.cpp  RemoraComms.h  comms.cpp  comms.h  configuration.h  spi_data.h
drivers/comms/MODDMA/: CMakeLists.txt  CONFIG.h  DATALUTS.cpp  INIT.cpp  MODDMA.cpp  MODDMA.h  SETUP.cpp  example1.h  example2.h  example3.h  example4.h  iomacros.h
drivers/pin/: CMakeLists.txt  pin.cpp  pin.h
lib/ArduinoJson6/: CMakeLists.txt
lib/ArduinoJson6/ArduinoJson/Variant/: VariantData.hpp
linuxcnc/config/carvera/: carvera_air.hal  carvera_air.ini
linuxcnc/driver/: carvera.c  electrophorus.c  machine_definitions.h  spi_data.h
machine_config/: CMakeLists.txt  machine_config.cpp  machine_config.h  machine_definitions.h
modules/: CMakeLists.txt  module.cpp  module.h
modules/adc/: adc.cpp  adc.h
modules/blink/: blink.cpp  blink.h
modules/digitalPin/: digitalPin.cpp  digitalPin.h
modules/digital_pin/: digital_pin.cpp  digital_pin.h
modules/eStop/: eStop.cpp  eStop.h
modules/e_stop/: eStop.cpp  eStop.h
modules/gpio/: digitalIns.cpp  digitalIns.h  digitalOuts.cpp  digitalOuts.h
modules/motorPower/: motorPower.cpp  motorPower.h
modules/pulseCounter/: pulseCounter.cpp  pulseCounter.h
modules/pulse_counter/: pulseCounter.cpp  pulseCounter.h
modules/pwm/: pwm.cpp  pwm.h
modules/rcservo/: rcservo.h
modules/resetPin/: resetPin.cpp  resetPin.h
modules/reset_pin/: resetPin.h
modules/stepgen/: stepgen.cpp  stepgen.h
modules/switch/: switch.cpp  switch.h
modules/thermistor/: thermistor.cpp  thermistor.h
thread/: CMakeLists.txt  MachineThread.cpp  MachineThread.h  cncThread.cpp  cncThread.h  lpcTimer.cpp  lpcTimer.h  pruThread.cpp  pruThread.h
(+14 files in other folders)
